FEAT:[about page][vadim]: added new packages and added new svgs

--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -11,3 +11,7 @@ body {
 	color: rgb(var(--color));
 	background: --background;
 }
+
+.section {
+	@apply w-full py-12 flex items-center border-b border-b-gray-300 justify-center flex-wrap flex md:py-24 lg:py-32;
+}
