--- a/src/screens/about/AboutPage.module.scss
+++ b/src/screens/about/AboutPage.module.scss
@@ -1,5 +1,5 @@
 .section_container {
-	@apply container px-4 md:px-6 grid gap-6 lg:grid-cols-[1fr_400px] lg:gap-12 xl:grid-cols-[1fr_600px];
+	@apply container  px-4 md:px-6 grid gap-6 lg:grid-cols-[1fr_400px] lg:gap-12 xl:grid-cols-[1fr_600px];
 
 	.section_content {
 		@apply flex flex-col gap-4 justify-center space-y-4;
@@ -26,7 +26,7 @@
 	}
 
 	.second_div_container {
-		@apply flex flex-col gap-2 min-[400px]:flex-row;
+		@apply flex flex-col gap-5 md:flex-row;
 
 		.first_link_button {
 			@apply bg-primary px-10 h-10 whitespace-pre rounded-full text-base text-white shadow flex items-center justify-center gap-1 hover:bg-primary/90 transition-all duration-300 ease-out hover:scale-105;
@@ -50,7 +50,7 @@
 	@apply flex gap-x-2 pt-1 font-sans text-sm;
 
 	.link {
-		@apply inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm focus-visible:ring-1 font-medium transition-colors focus-visible:outline-none px-3  disabled:opacity-50 border-slate-200 border bg-slate-50 shadow-lg py-2 shadow-sm transition-colors ease-in-out duration-300 hover:bg-slate-100;
+		@apply inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm focus-visible:ring-1 font-medium focus-visible:outline-none px-3  disabled:opacity-50 border-slate-200 border bg-slate-50  py-2 shadow-sm transition-colors ease-in-out duration-300 hover:bg-slate-100;
 	}
 }
 
@@ -73,16 +73,8 @@
 }
 
 .blob_container {
+	@apply w-[300px] h-[400px] overflow-hidden relative flex items-center justify-center m-auto bg-transparent border border-gray-200 max-h-[600px] max-w-[500px] md:h-[600px] md:w-[500px];
 	animation: blob 8s infinite;
-	height: 600px;
-	width: 500px;
-	overflow: hidden;
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin: auto;
-	background: #171717;
 }
 
 .image_inside {
